--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,7 @@
         <option value="2">2×</option>
       </select>
     </div>
-    <div class="author">Developed by N.Ayyappa Venkata Surya ❤️‍🔥</div>
+    <div class="author">Developed by Surya Nallamothu ❤️‍🔥</div>
     <div class="author">If any queries, message me :<a href="https://wa.me/9392567247?text=My%20Query%20%3A" target="_blank"> WhatsApp</a></div>
   </div>
 
